--- a/bibleApp.css
+++ b/bibleApp.css
@@ -22,7 +22,9 @@
 :root {
     --fontsize-main: 13px;
     --ref-hlt: #f8f8f8;
-    --ref-hlt: #f8f8ff;
+    --ref-hlt: #dde3db;
+    --ref-img: url(R.jpg);
+    --ref-img: url(background.jpg);
     --verse-higlight: #ffff92;
     --verse-higlight: #fffb001b;
     --nav-bg-color: #fbfbfb;
@@ -51,9 +53,12 @@ html {
     padding: 0;
     font-size: var(--fontsize-main);
     background-color: var(--nav-bg-color);
+    background: url(R.jpg);
+    background: -webkit-radial-gradient(center, ellipse closest-corner, rgba(251, 251, 251, 0.825) 0%, rgba(251, 251, 251, 0.875) 25%, rgba(255, 255, 255, 0) 100%), url(background.jpg);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
 body>svg {
     width: 100% !important;
 }
@@ -154,6 +159,13 @@ code {
     float: left;
     overflow: hidden;
 }
+[bversion]{
+    font-size: 8px!important;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display:block;
+}
 
 
 .refnav .bible_nav {
@@ -171,18 +183,20 @@ code {
 
 #refnav .bible_nav *:hover {
     background-color: var(--ref-hlt);
-    font-style: italic;
+    /* font-style: italic; */
+    /* background: var(--ref-img); */
 }
 
 #refnav .bible_nav *:active {
-    background-color: var(--verse-higlight);
+    /* background-color: var(--verse-higlight); */
+    background: var(--ref-img);
 }
 
 .ref_hlt {
     font-weight: bold;
     font-style: italic;
     background-color: var(--ref-hlt);
-    background-color: var(--ref-hlt);
+    background: var(--ref-img);
     border-top: 0.25px solid rgba(128, 128, 128, 0.611);
     border-bottom: 0.25px solid rgba(128, 128, 128, 0.611);
 }
@@ -530,6 +544,7 @@ main span {
     /* background-color: var(--darkmode-bg1color);
     color: white; */
     border-bottom: 2px solid;
+    font-size: smaller;
 }
 
 #bible_versions {
@@ -752,18 +767,18 @@ main span {
 .vmultiple {
     display: flex !important;
     flex-wrap: wrap;
-    max-width: 900px;
+    /* max-width: 900px; */
 }
 
 .vmultiple>span {
     padding: 5px 5px;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid rgb(216, 216, 216);
+    flex-basis: 50px;
+    flex-grow: 1;
     /* border: 1px solid grey; */
     /* text-align: center; */
     /* margin: 5px; */
     /* width: 150px; */
-    flex-basis: 150px;
-    flex-grow: 1;
 }
 
 /* .vmultiple>span+span {} */
