--- a/bibleApp.css
+++ b/bibleApp.css
@@ -18,9 +18,10 @@
     --vhlt-border: #8080809c;
     --vhlt: #ffffc4;
     --redwords:crimson;
-    --strongword-hover: rgb(237, 213, 222);
-    --strongword-hover: rgb(216, 255, 137);
     --strongword-hover: rgb(255, 241, 137);
+    --strongword-hover: rgb(216, 255, 137);
+    --strongword-hover: rgb(237, 213, 222);
+    --strongword-hover: rgb(255, 250, 163);
     --chpt: rgb(238, 227, 202);
     --verse-hover: rgb(248, 246, 241);
     /* --verse-hover: rgba(192, 176, 98, 0.858);
@@ -39,11 +40,9 @@
     /* --buttons: #FCFCFC 110.00000000000001%; */
     --buttons-border: 0.25px solid #70707072;
 }
-
 ::selection {
     background-color: rgba(0, 0, 255, 0.1);
 }
-
 html {
     padding: 0;
     font-size: var(--fontsize-main);
@@ -54,17 +53,14 @@ html {
     background: var(--ref-img);
     font-family: var(--main-font);
 }
-
 body>svg {
     width: 100% !important;
 }
-
 body {
     margin: 0;
     overflow-y: hidden;
     /* don't add color to the body, it will hide the svg */
 }
-
 #pagemaster {
     position: relative;
     height: 100vh;
@@ -76,39 +72,31 @@ body {
     row-gap: 0;
     /* overflow-y:scroll; */
 }
-
 #ppp code, #context_menu code {
     font-size: var(--fontsize-ref);
 }
-
 .chptheading {
     background-color: var(--chpt);
     border-bottom: 0.5px solid grey;
     font-size: small;
 }
-
 #searchPreviewFixed .chptheading {
     font-size: xx-small;
     font-weight: bolder;
     margin: 0;
 }
-
 td:first-child {
     width: 70px;
 }
-
 #ppp .verse:not(code) {
     font-size: var(--fontsize-scripture);
 }
-
 #searchPreviewFixed .chptheading+.verse {
     margin-top: 5px;
 }
-
 #ppp>span {
     display: block;
 }
-
 #refnav {
     grid-column-start: 1;
     grid-column-end: 2;
@@ -116,15 +104,12 @@ td:first-child {
     grid-row-end: 4;
     display: flex;
 }
-
 .rtl {
     direction: rtl
 }
-
 #singleverse_compare_menu {
     /* display: inline-flex; */
 }
-
 #singleverse_compare_menu button {
     font-size: xx-small !important;
     width: 25px;
@@ -132,13 +117,11 @@ td:first-child {
     padding: 2px;
     text-overflow: ellipsis;
 }
-
 #singleverse_compare_menu input {
     width: 5.5px;
     position: absolute;
     right: 0;
 }
-
 .slidein {
     display: block;
     margin-left: 0;
@@ -148,7 +131,6 @@ td:first-child {
     -o-transition-duration: 0.3s;
     transition-duration: 0.3s;
 }
-
 .slideout {
     display: none;
     margin-left: -500px;
@@ -158,36 +140,30 @@ td:first-child {
     -o-transition-duration: 0.3s;
     transition-duration: 0.3s;
 }
-
 #refnav>.refnav {
     height: 100%;
     float: left;
 }
-
 #refnav #app_settings {
     border-right: 5px solid grey;
     /* background-color: var(--top-bar-bground-color); */
     /* background-color: var(--buttons); */
     background-image: var(--ref-img);
 }
-
 #refnav #app_settings * {
     display: block;
     width: 22px;
     padding: 0;
     /* font-size:xx-small; */
 }
-
 #bibleversions_btns {
     display: inline-flex;
 }
-
 #bibleversions_btns input {
     width: 6px;
     /* margin: 0; */
     pointer-events: none;
 }
-
 #bibleversions_btns button {
     display: block;
     padding: 0;
@@ -198,11 +174,9 @@ td:first-child {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
 #bible_nav {
     font-size: small;
 }
-
 .refnav .bible_nav {
     height: 99.5%;
     float: left;
@@ -210,23 +184,19 @@ td:first-child {
     overflow-y: scroll;
     border-bottom: 2px solid;
 }
-
 #refnav .bible_nav * {
     /* font-size: 0.75em; */
     cursor: pointer;
 }
-
 #refnav .bible_nav *:hover {
     background-color: var(--ref-hlt);
     /* font-style: italic; */
     /* background: var(--ref-img); */
 }
-
 #refnav .bible_nav *:active {
     /* background-color: var(--verse-higlight); */
     background: var(--ref-img);
 }
-
 .ref_hlt {
     font-weight: bold;
     font-style: italic;
@@ -235,38 +205,30 @@ td:first-child {
     border-top: 0.25px solid rgba(128, 128, 128, 0.611);
     border-bottom: 0.25px solid rgba(128, 128, 128, 0.611);
 }
-
 .tmp_hlt {
     background-color: var(--ref-hlt);
 }
-
 #bible_chapters>option {
     display: none;
 }
-
 .show_chapter {
     display: block !important;
 }
-
 #bible_verses {
     display: none;
 }
-
 #bible_verses>option {
     /* display: none; */
     width: 20px;
 }
-
 .show_verses {
     /* display: block !important; */
 }
-
 button {
     cursor: pointer;
     background-color: var(--buttons);
     border: var(--buttons-border);
 }
-
 .buttons {
     grid-column-start: 1;
     grid-column-end: 5;
@@ -277,12 +239,10 @@ button {
     border-bottom: 2px solid grey;
     display: flex;
 }
-
 #ref_search_versions_holder {
     display: flex;
     flex-wrap: wrap;
 }
-
 #context_menu {
     box-sizing: border-box;
     position: absolute;
@@ -303,28 +263,21 @@ button {
     z-index: 10;
     font-size: var(--fontsize-strongstooltip);
     overflow-x:hidden;
-}
-#context_menu>hr+.strngsdefinition>hr:first-child{display: none;}
-#context_menu h2 {
+}#context_menu>hr+.strngsdefinition>hr:first-child{display: none;}#context_menu h2 {
     font-size:x-large;
-}
-#context_menu i {
+}#context_menu i {
     font-size:small;
-}
-#context_menu .strngsdefinition div {
+}#context_menu .strngsdefinition div {
     display: block;
-}
-.vmultiple code:hover, #searchPreviewFixed .verse code:hover, .crossrefs>span:hover, #context_menu code:hover {
+}.vmultiple code:hover, #searchPreviewFixed .verse code:hover, .crossrefs>span:hover, #context_menu code:hover {
     text-decoration: underline;
     color: blue;
     cursor: pointer;
-}
-#tool_tip {
+}#tool_tip {
     /* float:left; */
     position: fixed;
     right: 0;
 }
-
 #context_menu .cmtitlebar{
     position: sticky;
     top: 0;
@@ -335,8 +288,7 @@ button {
     box-shadow: 0px -6px 0 0px whitesmoke; */
     font-size: small;
     font-weight: bold;
-}
-#context_menu .cmtitlebar::after{
+}#context_menu .cmtitlebar::after{
     position: absolute;
     content: '';
     left:-10px;
@@ -346,8 +298,7 @@ button {
     width: 150%;
     height: 1px;
     z-index: -1;
-}
-#context_menu .cmtitlebar::before{
+}#context_menu .cmtitlebar::before{
     position: absolute;
     content: '';
     left:-10px;
@@ -358,57 +309,46 @@ button {
     width: 150%;
     height: 10px;
     z-index: -1;
-}
-#context_menu:hover {
+}#context_menu:hover {
     /* border: 1px solid #878787; */
     -webkit-box-shadow: 1px 1px 3px 0px rgba(20, 2, 67, 0.87);
     -moz-box-shadow: 1px 1px 3px 0px rgba(20, 2, 67, 0.87);
     box-shadow: 1px 1px 3px 0px rgba(20, 2, 67, 0.87);
 }
-
 .buttons>button,
 .buttons>#searchdiv button,
 .buttons>#refdiv button {
     font-size: 12px;
 }
-
 .buttons>#searchdiv,
 .buttons>#refdiv {
     padding-top: 0 !important;
     display: inline-flex;
 }
-
 #reference {
     vertical-align: bottom;
     background-color: var(--buttons);
     border: var(--buttons-border);
 }
-
 input:hover,
 button:not(:disabled):hover {
     background-color: var(--chpt) !important;
 }
-
 .active_button,
 searchsettings.active_button {
     background-color: var(--chpt) !important;
 }
-
 .red, span.red span{
     color: var(--redwords)!important;
-}
-.strongsnum {
+}.strongsnum {
     color: rgb(64, 59, 105);
-}
-span:not(.red) span[strnum^=H],
+}span:not(.red) span[strnum^=H],
 span:not(.red) span[strnum^=G] {
     /* color: black; */
 }
-
 [strnum]:empty {
     display: none !important;
 }
-
 #main {
     /* border: 3px solid orange; */
     max-width: 100%;
@@ -420,15 +360,12 @@ span:not(.red) span[strnum^=G] {
     display: flex;
     position: relative;
 }
-
 #main>*>* {
     padding-left: 5px;
 }
-
 #ppp {
     /* background-image: var(--ref-paper); */
 }
-
 #search_section {
     /* max-width:100px; */
     grid-column-start: 4;
@@ -437,106 +374,89 @@ span:not(.red) span[strnum^=G] {
     grid-row-end: 4;
     background-color: royalblue;
 }
-
 #ppp>span.verse:last-child {
     /* margin-bottom: 20px; */
     padding-bottom: 20px;
 }
-
 [strnum] {
     cursor: pointer;
 }
-
+.crossrefs{font-size: 9.5px;}
 span.verse:hover:not(.vhlt),
 span.vmultiple:hover {
     transition: background 0.05s linear;
 }
-
 span.verse:hover:not(.vhlt){
     /* box-sizing:border-box!important; */
     background-color: var(--verse-hover);
     /* box-shadow: 0 0 2px 0 rgb(30, 30, 30)*/
     cursor: pointer;
-}
-span.vmultiple:hover .verse{
+}span.vmultiple:hover .verse{
     background-color: var(--vmultiple-hover);
     background-color: var(--verse-hover);
     transition: box-shadow 0.05s linear;
-    box-shadow: 0 0 1px 0 var(--shadow-color),
-    0 1px 1px 0 var(--shadow-color),
-    0 -1px 1px 0 var(--shadow-color),
-    1px 0 0 0 var(--shadow-color);
+    box-shadow: 1px 5px 5px -2px var(--shadow-color),
+    3px -2px 2.5px -1px var(--shadow-color)!important;
     z-index: 2;
 }
-
 span[class^=v_]:hover {
     background-color: rgb(246, 239, 227)!important;
     background-color: var(--vhlt)!important;
-    box-shadow: 0 -2px 2px 0 var(--shadow-color),
-    0 2px 2px 0 var(--shadow-color)!important;
+    box-shadow: 1px 5px 5px -2px var(--shadow-color),
+    3px -2px 2.5px -1px var(--shadow-color),
+    -10px -2px 0px -0px var(--shadow-color)!important;
+    z-index:5;
 }
 span.translated:hover {
     border-bottom: 1px solid rgb(151, 116, 0);
     color: brown;
 }
-
 sup {
     font-weight: bold;
 }
-
 main span {
     /* font-size: x-small; */
 }
-
 .translated[trans] {
     /* font-size: xx-small; */
     font-weight: 600;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
 #wordsearch {
     /* cursor: pointer; */
     background-color: var(--buttons);
     border: var(--buttons-border);
 }
-
 #wordsearch::-webkit-input-placeholder,
 #reference::-webkit-input-placeholder {
     font-style: italic;
 }
-
 #wordsearch:-moz-placeholder,
 #reference:-moz-placeholder {
     font-style: italic;
 }
-
 #wordsearch::-moz-placeholder,
 #reference::-moz-placeholder {
     font-style: italic;
 }
-
 #wordsearch:-ms-input-placeholder,
 #reference:-ms-input-placeholder {
     font-style: italic;
 }
-
 .search_options {
     display: none;
     font-size: small;
     font-style: italic;
     color: whitesmoke;
 }
-
 /* .strnum:before {content: " " attr(data-xlit) " ";} */
 .eng2grk {
     text-indent: -9999px;
 }
-
 .eng2grk>span {
     display: inline;
     font-weight: bold;
 }
-
 /* 
 .strnum:after {
     content: attr(data-lemma);
@@ -550,14 +470,12 @@ main span {
     height: 100%;
     width: 150px;
 }
-
 .relative {
     position: relative;
     /* margin-top: 100px; */
     /* width: 100%;*/
     height: 100%;
 }
-
 #searchPreview {
     position: absolute;
     top: 5px;
@@ -570,18 +488,15 @@ main span {
     max-height: 90%;
     overflow-y: scroll;
 }
-
 #searchPreview>* {
     display: block;
     padding: 0 5px;
 }
-
 #searchPreview [ref]:hover {
     font-weight: bolder;
     border-bottom: 1px dashed blue;
     border: 2px solid gray;
 }
-
 #searchboxtitlebar {
     position: absolute;
     top: 0;
@@ -593,11 +508,9 @@ main span {
     cursor: pointer;
     z-index: 2;
 }
-
 #searchrelative {
     display: flex;
 }
-
 #searchclose {
     /* position: absolute;
     top: 0px;
@@ -610,20 +523,16 @@ main span {
     /* color:white;
     background-color: rgb(158, 42, 0); */
 }
-
 #searchclose:active,
 #searchminimize:active {
     font-style: italic;
 }
-
 #searchclose:hover {
     background-color: lightpink;
 }
-
 #searchminimize:hover {
     background-color: greenyellow;
 }
-
 #searchminimize {
     /* position: absolute;
     top: 0px;
@@ -637,12 +546,10 @@ main span {
     background-color: greenyellow; */
     /* z-index: -1; */
 }
-
 #refnav input {
     height: 8px;
     width: 8px;
 }
-
 #searchparameters {
     min-height: auto;
     /* display: block; */
@@ -651,7 +558,6 @@ main span {
     background-color: var(--ref-hlt);
     font-size: 10px;
 }
-
 #searchparameters div:first-of-type+div,
 #bibleapp_cache div:first-of-type,
 #bibleapp_cache .settingssectionheadings {
@@ -665,12 +571,10 @@ main span {
     font-weight: bold;
     text-align: center;
 }
-
 #bibleapp_cache *:not(.settingssectionheadings) {
     display: inline-flex;
     font-size: xx-small;
 }
-
 #searchparameters div:last-child {
     display: block;
     background-color: var(--verse-higlight);
@@ -678,12 +582,10 @@ main span {
     border-top: 1.5px solid var(--scroll-track-bg-color);
     box-shadow: 0 2px 0 grey;
 }
-
 #searchparameters #where2display {
     display: block;
     border-top: 1.1px solid var(--scroll-track-bg-color);
 }
-
 #hidesearchparameters {
     padding: 0;
     margin-top: -2px;
@@ -693,11 +595,9 @@ main span {
     cursor: pointer;
     height: 15px;
 }
-
 .hidesearchparameters>*:not(div) {
     display: none !important;
 }
-
 #strongsdefinitionwindow,
 #bible_versions,
 #bibleapp_cache {
@@ -713,18 +613,15 @@ main span {
     padding-right: 2px;
     border-bottom: 2px solid;
     font-size: smaller;
-}
-#bible_versions,
+}#bible_versions,
 #bibleapp_cache {
     overflow-y: scroll;
-}
-#strongsdefinitionwindow::after {
+}#strongsdefinitionwindow::after {
     content: '';
     background-color: #ccc;
     /* position: absolute; */
     right: 0;
 }
-
 #resizerdiv {
     background-color: grey;
     float: right;
@@ -732,18 +629,15 @@ main span {
     height: 100%;
     cursor: ew-resize;
 }
-
 #strongsdefinitionwindow>*:not(hr),
 #bible_versions>*:not(hr),
 #bibleapp_cache>*:not(hr) {
     padding-right: 3px;
     padding-left: 3px;
 }
-
 #bible_versions {
     font-size: xx-small;
 }
-
 .strngsdefinition h1,
 .strngsdefinition h2,
 .strngsdefinition h3,
@@ -754,11 +648,9 @@ main span {
     padding-bottom: 0;
     margin-bottom: 0;
 }
-
 .strngsdefinition {
     margin-bottom: 10px;
 }
-
 #searchPreviewWindowFixed {
     float: left;
     width: 150px;
@@ -769,7 +661,6 @@ main span {
     border-bottom: 2px solid;
     font-size: 12px;
 }
-
 #searchPreviewFixed {
     display: table-row;
     height: 92%;
@@ -777,44 +668,34 @@ main span {
     width: 150px;
     overflow-y: scroll;
 }
-
 #searchPreviewFixed>* {
     display: block;
     padding: 0 5px;
 }
-
 #searchPreviewFixed>.chptheading,
 #searchPreviewFixed code {
     cursor: pointer;
 }
-
 .displaynone {
     display: none !important;
 }
-
 .displayshow {
     display: block !important;
 }
-
 @keyframes blink {
     0% {
         background-color: beige;
     }
-
     75% {
         background-color: rgb(255, 170, 80);
     }
-
     100% {
         background-color: beige;
-    }
-}
-
+    }}
 .vglow {
     animation: blink 3s 2;
     animation-direction: alternate;
 }
-
 .vhlt {
     background-color: var(--vhlt);
     border-top: 0.25px solid var(--vhlt-border);
@@ -826,29 +707,24 @@ main span {
     -moz-box-shadow: 1px 1px 2px 0px rgba(67, 67, 67, 0.87);
     box-shadow: 1px 1px 2px 0px rgba(67, 67, 67, 0.87);
 }
-
 .vhlt:hover {
     background-color: #fff08f99;
     -webkit-box-shadow: 1px 1px 1px 0px rgba(67, 67, 67, 0.87);
     -moz-box-shadow: 1px 1px 1px 0px rgba(67, 67, 67, 0.87);
     box-shadow: 1px 1px 1px 0px rgba(67, 67, 67, 0.87);
 }
-
 .vhlt+.vhlt {
     border-top: 0;
     padding-bottom: 3px;
 }
-
 #mobilebuttons {
     display: none;
 }
-
 @media screen and (max-device-width: 500px) {
 
     html {
         font-size: 27px;
     }
-
     #mobilebuttons {
         display: flex;
         position: absolute;
@@ -859,14 +735,12 @@ main span {
         ;
         height: 100px;
     }
-
     #mobilebuttons>button {
         display: block;
         width: 100px;
         height: 50px;
         font-size: larger;
     }
-
     .buttons {
         position: absolute;
         top: calc(100vh - 150px);
@@ -874,52 +748,42 @@ main span {
         max-width: calc(100vw);
         /* background-color: transparent!important; */
     }
-
     .buttons>div {
         width: 100vw;
         height: 100px;
     }
-
     .buttons * {
         font-size: 27px !important;
         min-height: 50px;
         min-width: 50px;
     }
-
     .buttons button {
         float: right
     }
-
     #reference {
         width: 100vw;
     }
-
     #wordsearch {
         width: 100vw;
         top: 50px;
     }
-
     #togglenavbtn {
         min-height: 75px;
         min-width: 75px;
         font-size: 50px !important;
         display: none !important;
     }
-
     #searchdiv,
     #refdiv {
         display: none;
     }
-
     h2 {
         font-size: 20px;
     }
-
     code {
         font-size: 20px;
         font-weight: bold;
     }
-
     #searchPreview {
         width: calc(100vw - 40px);
         height: calc(100vh - 200px) !important;
@@ -927,50 +791,41 @@ main span {
         right: 10px;
         border: 5px solid red;
     }
-
     #searchboxtitlebar div {
         font-size: 18px;
         display: flex;
-    }
-}
-
+    }}
 /* SCROLL BAR */
 /* width */
 ::-webkit-scrollbar {
     width: 7.5px;
 }
-
 /* Track */
 ::-webkit-scrollbar-track {
     /* background: #f1f1f1; */
     background: var(--scroll-track-bg-color);
 }
-
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: var(--scroll-thumb-bgcolor);
     border-top: 2px solid var(--scroll-thumb-border-color);
     border-bottom: 2px solid var(--scroll-thumb-border-color);
 }
-
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: var(--scroll-thumb-hover-bg-color);
     border-top: 2px solid var(--scroll-thumb-hover-border);
     border-bottom: 2px solid var(--scroll-thumb-hover-border);
 }
-
 /* BEREAN BIBLE */
 .section_headings {
     display: none;
 }
-
 .vmultiple {
     display: flex !important;
     flex-wrap: wrap;
     /* max-width: 900px; */
 }
-
 .vmultiple>span {
     padding: 5px 5px;
     border-bottom: 1px solid rgb(216, 216, 216);
@@ -981,73 +836,60 @@ main span {
     /* margin: 5px; */
     /* width: 150px; */
 }
-
 /* .vmultiple>span+span {} */
 .flashit {
     -webkit-animation: flash linear 1.5s;
     animation: flash linear 1.5s;
 }
-
 @-webkit-keyframes flash {
     0% {
         opacity: 1;
         background-color: #f5f1c6;
         font-weight: 1000;
     }
-
     20% {
         opacity: 1;
         background-color: #ffff92;
         font-weight: 200;
     }
-
     80% {
         opacity: 1;
         background-color: #f5f1c6;
         font-weight: 200;
     }
-
     95% {
         opacity: 1;
         background-color: #f5f1c6;
         font-weight: 400;
     }
-
     100% {
         opacity: 1;
         background-color: transparent;
         font-weight: 100;
-    }
-}
-
+    }}
 @-keyframes flash {
     0% {
         opacity: 1;
         background-color: #f5f1c6;
         font-weight: 100;
     }
-
     20% {
         opacity: .1;
         background-color: #ffff92;
         font-weight: 200;
     }
-
     80% {
         opacity: .8;
         background-color: #f5f1c6;
         font-weight: 500;
     }
-
     95% {
         opacity: 1;
         background-color: #f5f1c6;
         font-weight: 700;
     }
-
     100% {
         opacity: 1;
         background-color: transparent;
         font-weight: 700;
-    }
-}
+    }}
