--- a/bibleApp.css
+++ b/bibleApp.css
@@ -19,6 +19,7 @@
     --nav-bg-color: #fbfbfb;
     --vhlt-border: #8080809c;
     --vhlt: #ffffc4;
+    --vhlt2: #ffff99;
     --redwords:crimson;
     --strongword-hover: rgb(255, 241, 137);
     --strongword-hover: rgb(216, 255, 137);
@@ -86,9 +87,6 @@ body {
     font-size: xx-small;
     font-weight: bolder;
     margin: 0;
-}
-td:first-child {
-    width: 70px;
 }
 #ppp .verse:not(code) {
     font-size: var(--fontsize-scripture);
@@ -173,14 +171,6 @@ padding-top: 5px;}
 .note_edit_button:active{
     box-shadow: 0px 0px 2px 0px var(--shadow-color);
 }
-.slideup {
-    min-height: 0;
-    max-height: 0;
-    padding: 0;
-    margin-bottom:0;
-    line-height: 0;
-    opacity: 0.1;
-}
 #singleverse_compare_menu {
     /* display: inline-flex; */
 }
@@ -195,24 +185,6 @@ padding-top: 5px;}
     width: 5.5px;
     position: absolute;
     right: 0;
-}
-.slidein {
-    display: block;
-    margin-left: 0;
-    margin-top: 0;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-}
-.slideout {
-    display: none;
-    margin-left: -500px;
-    margin-top: 0;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
 }
 #refnav>.refnav {
     height: 100%;
@@ -407,6 +379,9 @@ button {
 .buttons>#refdiv {
     padding-top: 0 !important;
     display: inline-flex;
+}
+div.buttons{
+    overflow-y: hidden;
 }
 #reference {
     vertical-align: bottom;
@@ -628,6 +603,9 @@ main span {
     background-color: greenyellow; */
     /* z-index: -1; */
 }
+#refnav {
+    font-size: var(--fontsize-scripture);
+}
 #refnav input {
     height: 8px;
     width: 8px;
@@ -645,7 +623,16 @@ main span {
 #bibleapp_cache .settingssectionheadings {
     border-bottom: 1px solid var(--scroll-track-bg-color);
     border-top: 1px solid var(--scroll-track-bg-color);
-    width: 100%;
+    /* width: 96%; */
+    margin: 0;
+    box-shadow: 0 0.5px 0 rgb(58, 58, 58);
+    background-color: whitesmoke;
+    background-image: var(--ref-img);
+    font-style: italic;
+    font-weight: bold;
+    text-align: center;
+}
+.bible_versions_heading{
     box-shadow: 0 0.5px 0 rgb(58, 58, 58);
     background-color: whitesmoke;
     background-image: var(--ref-img);
@@ -654,8 +641,8 @@ main span {
     text-align: center;
 }
 #bibleapp_cache *:not(.settingssectionheadings) {
-    display: inline-flex;
-    font-size: xx-small;
+    /* display: inline-flex; */
+    font-size: var(--fontsize-main);
 }
 #searchparameters div:last-child {
     display: block;
@@ -682,23 +669,31 @@ main span {
 }
 #strongsdefinitionwindow,
 #bible_versions,
-#bibleapp_cache {
+#bibleapp_cache {   
     float: left;
     max-width: 150px;
     height: 99.3%;
     border-right: 2px solid grey;
     overflow-y: auto;
     background-color: var(--verse-higlight);
-    /* background-color: whitesmoke; */
-    /* background-color: var(--darkmode-bg1color);
-    color: white; */
-    padding-right: 2px;
+    /* padding-right: 2px; */
     border-bottom: 2px solid;
     font-size: smaller;
 }#bible_versions,
 #bibleapp_cache {
     overflow-y: scroll;
-}#strongsdefinitionwindow::after {
+}
+#bibleapp_cache label,#bibleapp_cache input {
+    display: inline!important;
+}
+#cache_table {
+    display: table!important;
+    border-collapse:collapse;
+    box-sizing: border-box;
+    /* border-spacing: 2px; */
+    /* border-color: grey; */
+}
+#strongsdefinitionwindow::after {
     content: '';
     background-color: #ccc;
     /* position: absolute; */
@@ -718,7 +713,7 @@ main span {
     padding-left: 3px;
 }
 #bible_versions {
-    font-size: xx-small;
+    font-size: var(--fontsize-main);
 }
 .strngsdefinition h1,
 .strngsdefinition h2,
@@ -758,61 +753,7 @@ main span {
 #searchPreviewFixed code {
     cursor: pointer;
 }
-.displaynone {
-    display: none !important;
-}
-.displayshow {
-    display: block !important;
-}
-@keyframes blink {
-    0% {
-        background-color: beige;
-    }
-    75% {
-        background-color: rgb(255, 170, 80);
-    }
-    100% {
-        background-color: beige;
-    }}
-.vglow {
-    animation: blink 3s 2;
-    animation-direction: alternate;
-}
-.vhlt {
-    background-color: var(--vhlt);
-    border-top: 0.25px solid var(--vhlt-border);
-    border-left: 0.25px solid var(--vhlt-border);
-    border-right: 0.25px solid var(--vhlt-border);
-    border-radius: 2px;
-    z-index: 1;
-    -webkit-box-shadow: 1px 1px 2px 0px rgba(67, 67, 67, 0.87);
-    -moz-box-shadow: 1px 1px 2px 0px rgba(67, 67, 67, 0.87);
-    box-shadow: 1px 1px 2px 0px rgba(67, 67, 67, 0.87);
-}
-.vhlt:hover {
-    background-color: #fff08f99;
-    -webkit-box-shadow: 1px 1px 1px 0px rgba(67, 67, 67, 0.87);
-    -moz-box-shadow: 1px 1px 1px 0px rgba(67, 67, 67, 0.87);
-    box-shadow: 1px 1px 1px 0px rgba(67, 67, 67, 0.87);
-}
-.vhlt+.vhlt {
-    border-top: 0;
-    padding-bottom: 3px;
-}
-#mobilebuttons {
-    display: none;
-}
-@media screen and (max-device-width: 500px) {
 
-    :root {
-        --fontsize-main: 17px;
-        --fontsize-scripture: 17px;
-        --fontsize-ref: 12px;
-        --fontsize-strongstooltip: 17px;
-        --width-sidebuttons:40px;
-        --width-mainbutton:45px;
-    }
-}
 /* SCROLL BAR */
 /* width */
 ::-webkit-scrollbar {
@@ -849,12 +790,74 @@ main span {
     border-bottom: 1px solid rgb(216, 216, 216);
     flex-basis: 50px;
     flex-grow: 1;
-    /* border: 1px solid grey; */
-    /* text-align: center; */
-    /* margin: 5px; */
-    /* width: 150px; */
 }
-/* .vmultiple>span+span {} */
+span.vmultiple:hover span.vhlt {
+    background: var(--vhlt2);
+}
+
+/* ANIMATIONS CLASSES */
+.slideup {
+    min-height: 0;
+    max-height: 0;
+    padding: 0;
+    margin-bottom:0;
+    line-height: 0;
+    opacity: 0.1;
+}
+.slidein {
+    display: block;
+    margin-left: 0;
+    margin-top: 0;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+.slideout {
+    display: none;
+    margin-left: -500px;
+    margin-top: 0;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+.displaynone {
+    display: none !important;
+}
+.displayshow {
+    display: block !important;
+}
+@keyframes blink {
+    0% {background-color: beige;}
+    75% {background-color: rgb(255, 170, 80);}
+    100% {background-color: beige;}
+}
+.vglow {
+    animation: blink 3s 2;
+    animation-direction: alternate;
+}
+.vhlt {
+    background-color: var(--vhlt);
+    border-top: 0.25px solid var(--vhlt-border);
+    border-left: 0.25px solid var(--vhlt-border);
+    border-right: 0.25px solid var(--vhlt-border);
+    border-radius: 2px;
+    z-index: 1;
+    -webkit-box-shadow: 1px 1px 2px 0px rgba(67, 67, 67, 0.87);
+    -moz-box-shadow: 1px 1px 2px 0px rgba(67, 67, 67, 0.87);
+    box-shadow: 1px 1px 2px 0px rgba(67, 67, 67, 0.87);
+}
+.vhlt:hover {
+    background-color: #fff08f99;
+    -webkit-box-shadow: 1px 1px 1px 0px rgba(67, 67, 67, 0.87);
+    -moz-box-shadow: 1px 1px 1px 0px rgba(67, 67, 67, 0.87);
+    box-shadow: 1px 1px 1px 0px rgba(67, 67, 67, 0.87);
+}
+.vhlt+.vhlt {
+    border-top: 0;
+    padding-bottom: 3px;
+}
 .flashit {
     -webkit-animation: flash linear 1.5s;
     animation: flash linear 1.5s;
@@ -884,7 +887,8 @@ main span {
         opacity: 1;
         background-color: transparent;
         font-weight: 100;
-    }}
+    }
+}
 @-keyframes flash {
     0% {
         opacity: 1;
@@ -910,4 +914,22 @@ main span {
         opacity: 1;
         background-color: transparent;
         font-weight: 700;
-    }}
+    }
+}
+[class^=v_].vhlt{
+    background-color: var(--vhlt2);
+}
+/* MEDIA QUERIES */
+#mobilebuttons {
+    display: none;
+}
+@media screen and (max-device-width: 500px) {
+    :root {
+        --fontsize-main: 17px;
+        --fontsize-scripture: 17px;
+        --fontsize-ref: 12px;
+        --fontsize-strongstooltip: 17px;
+        --width-sidebuttons:40px;
+        --width-mainbutton:45px;
+    }
+}
