--- a/bibleApp.css
+++ b/bibleApp.css
@@ -198,19 +198,22 @@ padding-top: 5px;}
     /* width: 35px; */
 }
 #refnav #app_settings * {
+    box-sizing: border-box;
     display: block;
-    width: var(--width-sidebuttons);
 }
 #refnav #app_settings img {
+    box-sizing: border-box;
     margin-left: 1px;
     margin-right: 1px;
+    width: var(--width-sidebuttons);
 }
 #refnav #app_settings > button {
-    min-width: var(--width-sidebuttons);
+    box-sizing: border-box;
+    /* min-width: var(--width-sidebuttons); */
     width:auto;
-    padding-left: 1px;
-    padding-right: 1px;
-    font-size: 21px;
+    padding-left: 2px;
+    padding-right: 2px;
+    font-size: 22.5px;
 }
 #bibleversions_btns {
     display: inline-flex;
@@ -936,5 +939,8 @@ span.vmultiple:hover span.vhlt {
         --fontsize-strongstooltip: 17px;
         --width-sidebuttons:40px;
         --width-mainbutton:45px;
+    }
+    #refnav #app_settings > button {
+        font-size: 32.5px;
     }
 }
